--- a/.travis.yml
+++ b/.travis.yml
@@ -11,15 +11,15 @@ install:
 - pip install jinja2
 before_script:
 - mkdir -p builds/build
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py . | tee builds/build/buildlog.txt
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py . 2>&1 | tee -a builds/build/buildlog.txt
 branches:
   only:
   - master
 after_script:
-- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
+- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-report.py builds/build
 - rm -rf builds/build/sources
 - rm -rf builds/build/build.state.yaml
-- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
+- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-travis-deploy.py
 env:
   global:
     secure: JUevY7M7i6Q78gH6KbH5xEnlbDc0eq7u555bEhUR1zctquD2iIXHmC+95+CBzZuYpR6uT1iRfzpWemx03Nn63B7h9w6JH0g4YvxiKtGSIcSQew9CZYBsIZ+imnFmB3rryJMQGzFLFwkr17HsC9Bcv+70Ixe9u1LF72XWvwmf4nc=
